site/assets/css/grid.css
.d-flex {
    display: flex;
}
.d-flex-wrap {
    display: flex;
    flex-wrap: wrap;
}
.d-column {
    display: flex;
    flex-direction: column;
}
.d-row {
    flex-direction: row;
}
.just-center {
    justify-content: center;
}
.just-between {
    justify-content: space-between;
}
.just-around {
    justify-content: space-around;
}
.just-evenly {
    justify-content: space-evenly;
}
.just-start {
    justify-content: flex-start;
}
.just-end {
    justify-content: flex-end;
}
.align-start {
    align-items: flex-start;
}
.align-center {
    align-items: center;
}
.align-end {
    align-items: flex-end;
}
.align-stretch {
    align-items: stretch;
}
.align-baseline {
    align-items: baseline;
}
.p-05 {
    padding: 5px;
}
.p-1 {
    padding: 10px;
}
.p-1-5 {
    padding: 15px;
}
.p-2 {
    padding: 20px;
}
.p-3 {
    padding: 30px;
}
.p-4 {
    padding: 40px;
}
.p-5 {
    padding: 50px;
}
.pr-04 {
    padding-right: 4px;
}
.pr-05 {
    padding-right: 5px;
}
.pr-1 {
    padding-right: 10px;
}
.pr-1-5 {
    padding-right: 15px;
}
.pr-2 {
    padding-right: 20px;
}
.pr-3 {
    padding-right: 30px;
}
.pr-4 {
    padding-right: 40px;
}
.pr-5 {
    padding-right: 50px;
}
.pl-04 {
    padding-left: 4px;
}
.pl-05 {
    padding-left: 5px;
}
.pl-1 {
    padding-left: 10px;
}
.pl-1-5 {
    padding-left: 15px;
}
.pl-2 {
    padding-left: 20px;
}
.pl-3 {
    padding-left: 30px;
}
.pl-4 {
    padding-left: 40px;
}
.pl-5 {
    padding-left: 50px;
}
.pb-04 {
    padding-bottom: 4px;
}
.pb-05 {
    padding-bottom: 5px;
}
.pb-1 {
    padding-bottom: 10px;
}
.pb-1-5 {
    padding-bottom: 15px;
}
.pb-2 {
    padding-bottom: 20px;
}
.pb-3 {
    padding-bottom: 30px;
}
.pb-4 {
    padding-bottom: 40px;
}
.pb-5 {
    padding-bottom: 50px;
}
.pt-04 {
    padding-top: 4px;
}
.pt-05 {
    padding-top: 5px;
}
.pt-1 {
    padding-top: 10px;
}
.pt-1-5 {
    padding-top: 15px;
}
.pt-2 {
    padding-top: 20px;
}
.pt-3 {
    padding-top: 30px;
}
.pt-4 {
    padding-top: 40px;
}
.pt-5 {
    padding-top: 50px;
}
.m-1 {
    margin: 10px;
}
.m-2 {
    margin: 20px;
}
.m-3 {
    margin: 30px;
}
.m-4 {
    margin: 40px;
}
.m-5 {
    margin: 50px;
}
.mr-1 {
    margin-right: 10px;
}
.mr-2 {
    margin-right: 20px;
}
.mr-3 {
    margin-right: 30px;
}
.mr-4 {
    margin-right: 40px;
}
.mr-5 {
    margin-right: 50px;
}
.ml-1 {
    margin-left: 10px;
}
.ml-2 {
    margin-left: 20px;
}
.ml-3 {
    margin-left: 30px;
}
.ml-4 {
    margin-left: 40px;
}
.ml-5 {
    margin-left: 50px;
}
.mb-1 {
    margin-bottom: 10px;
}
.mb-2 {
    margin-bottom: 20px;
}
.mb-3 {
    margin-bottom: 30px;
}
.mb-4 {
    margin-bottom: 40px;
}
.mb-5 {
    margin-bottom: 50px;
}
.mt-1 {
    margin-top: 10px;
}
.mt-2 {
    margin-top: 20px;
}
.mt-3 {
    margin-top: 30px;
}
.mt-4 {
    margin-top: 40px;
}
.mt-5 {
    margin-top: 50px;
}
.mg-auto {
    margin: auto;
}
.mr-auto {
    margin-right: auto;
}
.ml-auto {
    margin-left: auto;
}
.mb-auto {
    margin-bottom: auto;
}
.mt-auto {
    margin-top: auto;
}
.gap-05 {
    gap: 5px;
}
.gap-1 {
    gap: 10px;
}
.gap-1-5 {
    gap: 15px;
}
.gap-2 {
    gap: 20px;
}
.gap-2-5 {
    gap: 25px;
}
.gap-3 {
    gap: 30px;
}
.gap-3-5 {
    gap: 35px;
}
.gap-4 {
    gap: 40px;
}
.gap-4-5 {
    gap: 45px;
}
.gap-5 {
    gap: 50px;
}
.radius-4 {
    border-radius: 4px;
}
.radius-8 {
    border-radius: 8px;
}
.radius-10 {
    border-radius: 10px;
}
.radius-12 {
    border-radius: 12px;
}
.radius-16 {
    border-radius: 16px;
}
.radius-20 {
    border-radius: 20px;
}
.radius-24 {
    border-radius: 24px;
}
.radius-32 {
    border-radius: 32px;
}
.radius-40 {
    border-radius: 40px;
}
.radius-50 {
    border-radius: 50%;
}
.radius-100 {
    border-radius: 100px;
}
.vh-100 {
    height: 100vh;
}
.vhd-100 {
    height: 100dvh;
}
.vw-100 {
    width: 100vw;
}
.relative {
    position: relative;
}
.absolute {
    position: absolute;
}
.fixed {
    position: fixed;
}
.sticky {
    position: sticky;
}
.is-sticky {
    position: sticky;
    top: 20px;
    z-index: 10;
}
.top-0 {
    top: 0;
}
.top-1 {
    top: 10px;
}
.top-2 {
    top: 20px;
}
.top-3 {
    top: 30px;
}
.top-4 {
    top: 40px;
}
.top-5 {
    top: 50px;
}
.bottom-0 {
    bottom: 0;
}
.left-0 {
    left: 0;
}
.right-0 {
    right: 0;
}
.w-1 {
    width: 10px;
}
.h-1 {
    height: 10px;
}
.w-2 {
    width: 12px;
}
.h-2 {
    height: 12px;
}
.w-3 {
    width: 16px;
}
.h-3 {
    height: 16px;
}
.w-4 {
    width: 18px;
}
.h-4 {
    height: 18px;
}
.w-5 {
    width: 20px;
}
.h-5 {
    height: 20px;
}
.w-6 {
    width: 24px;
}
.h-6 {
    height: 24px;
}
.w-8 {
    width: 32px;
}
.h-8 {
    height: 32px;
}
.w-10 {
    width: 40px;
}
.h-10 {
    height: 40px;
}
.w-12 {
    width: 48px;
}
.h-12 {
    height: 48px;
}
.w-16 {
    width: 64px;
}
.h-16 {
    height: 64px;
}
.max-w100 {
    max-width: 100px;
}
.max-w200 {
    max-width: 200px;
}
.max-w250 {
    max-width: 250px;
}
.max-w300 {
    max-width: 300px;
}
.max-w400 {
    max-width: 400px;
}
.basis-0 {
    flex-basis: 0;
}
.basis-100 {
    flex-basis: 100%;
}
.basis-auto {
    flex-basis: auto;
}
.basis-150 {
    flex-basis: 150px;
}
.basis-200 {
    flex-basis: 200px;
}
.basis-250 {
    flex-basis: 250px;
}
.basis-300 {
    flex-basis: 300px;
}
.basis-350 {
    flex-basis: 350px;
}
.basis-400 {
    flex-basis: 400px;
}
.basis-450 {
    flex-basis: 450px;
}
.basis-500 {
    flex-basis: 500px;
}
.basis-600 {
    flex-basis: 600px;
}
.basis-700 {
    flex-basis: 700px;
}
.basis-800 {
    flex-basis: 800px;
}
.grow-1 {
    flex-grow: 1;
}
.grow-2 {
    flex-grow: 2;
}
.grow-3 {
    flex-grow: 3;
}
.grow-4 {
    flex-grow: 4;
}
.grow-5 {
    flex-grow: 5;
}
.grow-6 {
    flex-grow: 6;
}
.grow-7 {
    flex-grow: 7;
}
.grow-8 {
    flex-grow: 8;
}
@media (max-width: 600px) {
    .order-0 {
        order: 0;
    }
    .order-1 {
        order: 1;
    }
    .order-2 {
        order: 2;
    }
    .order-3 {
        order: 3;
    }
    .order-4 {
        order: 4;
    }
}
.font-size-0-8 {
    font-size: 0.8rem;
}
.font-size-0-9 {
    font-size: 0.9rem;
}
.font-size-1 {
    font-size: 12px;
}
.font-size-2 {
    font-size: 14px;
}
.font-size-3 {
    font-size: 16px;
}
.font-size-4 {
    font-size: 18px;
}
.font-size-5 {
    font-size: 20px;
}
.font-size-6 {
    font-size: 22px;
}
.line-height-1 {
    line-height: 1;
}
.line-height-1-5 {
    line-height: 1.5;
}
.line-height-2 {
    line-height: 2;
}
.line-height-2-5 {
    line-height: 2.5;
}
.line-height-3 {
    line-height: 3;
}
.line-height-3-5 {
    line-height: 3.5;
}
.line-height-4 {
    line-height: 4;
}
.line-height-4-5 {
    line-height: 4.5;
}
.line-height-5 {
    line-height: 5;
}
.text-left {
    text-align: left;
}
.text-center {
    text-align: center;
}
.text-right {
    text-align: right;
}
.text-justify {
    text-align: justify;
}
.font-lighter {
    font-weight: 100;
}
.font-light {
    font-weight: 300;
}
.font-normal {
    font-weight: 400;
}
.font-medium {
    font-weight: 500;
}
.font-bold {
    font-weight: 600;
}
.font-bolder {
    font-weight: 700;
}
.font-extraBold {
    font-weight: 800;
}

.nowrap {
    white-space: nowrap;
}
.scrollbar-hidden {
    overflow: auto;
    scrollbar-width: none; /* Firefox */
    -ms-overflow-style: none;  /* Internet Explorer 10+ */
}
.scrollbar-hidden::-webkit-scrollbar {
    display: none; /* Safari and Chrome */
}
.btn {
    display: flex;
    align-items: center;
    gap: 5px;
    padding: 10px 20px;
    text-decoration: none;
    transition: background-color 0.3s;
}
.btn-primary {
    color: #fff;
    background-color: var(--color-primary);
    position: relative;
}
.btn-secondary {
    color: var(--color-text);
    border: 1px solid var(--color-border);
}
.btn-sm {
    padding: 5px 12px;
    height: 38px;
    font-size: 13px;
    border-radius: 8px;
}
.btn-md {
    padding: 10px 20px;
    height: 48px;
    font-size: 16px;
     border-radius: 8px;
}
.btn-lg {
    padding: 15px 30px;
    height: 54px;
    font-size: 18px;
     border-radius: 8px;
}
.border {
    border: 1px solid var(--color-border);
}
.border-top {
    border-top: 1px solid var(--color-border);
}
.border-bottom {
    border-bottom: 1px solid var(--color-border);
}
.border-left {
    border-left: 1px solid var(--color-border);
}
.border-right {
    border-right: 1px solid var(--color-border);
}
.overflow-hidden {
    overflow: hidden;
}
.ellipsis-x {
    white-space:nowrap;
    text-overflow:ellipsis;
    overflow:hidden;
}
.ellipsis-y {
    display:-webkit-box;
    -webkit-box-orient:vertical;
    overflow:hidden;
    cursor: pointer
}
.line-clamp-2 {
    -webkit-line-clamp:2;
}
.line-clamp-3 {
    -webkit-line-clamp:3;
}
.line-clamp-4 {
    -webkit-line-clamp:4;
}
.line-clamp-5 {
    -webkit-line-clamp:5;
}
.line-clamp-6 {
    -webkit-line-clamp:6;
}
.pointer {
    cursor: pointer
}
.ltr {
    direction: ltr;
}
/* ================= Table Container ================= */
.table-box {
  position: relative;
  max-width: 100%;
  max-height: 500px;
  overflow: auto;
  border: 1px solid var(--color-border);
  border-radius: 10px;
  background: var(--color-white);
  -webkit-overflow-scrolling: touch;

  /* hide scrollbar */
  scrollbar-width: none;
}
.table-box::-webkit-scrollbar {
  width: 0;
  height: 0;
}

/* ================= Table Layout ================= */
.table-box table {
  display: block;
  min-width: max-content;
  border-collapse: separate;
  border-spacing: 0;
  font-size: 0.95rem;
}

.table-box thead,
.table-box tbody {
  display: block;
}

.table-box thead {
  position: sticky;
  top: 0;
  z-index: 30;
}

.table-box tr {
  display: flex;
  min-width: 100%;
  border-bottom: 1px solid var(--color-border);
  transition: background 0.2s;
}

.table-box tr:last-child {
  border-bottom: none;
}

/* ================= Cells ================= */
.table-box th,
.table-box td {
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 12px;
  white-space: nowrap;
  text-align: center;
}

.table-box th {
  background: var(--color-block);
  font-size: 0.85rem;
  font-weight: 600;
  text-transform: uppercase;
  color: var(--color-text);
  border-bottom: 1px solid var(--color-border);
  z-index: 10;
}

.table-box td {
  vertical-align: middle;
}

/* ================= Rounded Header ================= */
.table-box th:first-child { border-top-right-radius: 20px; }
.table-box th:last-child  { border-top-left-radius: 20px; }

/* ================= Row Interaction ================= */
tbody tr {
  cursor: pointer;
}

tbody tr:hover {
  background: #fff3cd3d;
  z-index: 5;
}

tbody tr:active {
  background: #fff3cd3d;
}

/* ================= Column Width System ================= */
/* fixed */
.table-box :is(th, td):nth-child(1) { width: 80px;  flex-shrink: 0; padding-inline: 10px; }
.table-box :is(th, td):nth-child(2) { width: 140px; flex-shrink: 0; }
.table-box :is(th, td):nth-child(5) { width: 100px; flex-shrink: 0; }
.table-box :is(th, td):nth-child(6),
.table-box :is(th, td):nth-child(7) { width: 140px; flex-shrink: 0; }

/* fluid */
.table-box :is(th, td):nth-child(3),
.table-box :is(th, td):nth-child(4) {
  flex: 1;
  min-width: 150px;
}

